2009-09-04  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Support binutils 2.20.

2009-09-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/multiarch/strstr-c.c (__strstr_sse42,
	__strstr_ia32): Add attribute_hidden.

2009-09-01  Andreas Schwab  <schwab@redhat.com>

	* hesiod/nss_hesiod/hesiod-grp.c (internal_gid_from_group): Fix
	parsing of group entry.

2009-09-02  Andreas Schwab  <schwab@redhat.com>

	* libio/wfileops.c (_IO_wfile_seekoff): Account for readahead in
	external buffer.  Always discard readahead in internal buffer.
	* libio/Makefile (tests): Add bug-wsetpos.
	* libio/bug-wsetpos.c: New file.

2009-09-02  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/x86_64/multiarch/strstr-c.c (__strstr_sse42, __strstr_sse2):
	Add attribute_hidden.
	* sysdeps/x86_64/multiarch/strcasestr-c.c (__strcasestr_sse42,
	__strcasestr_sse2): Likewise.
	* sysdeps/x86_64/multiarch/s_fma.c (__fma_sse2): Add attribute_hidden.
	(__fma_fma): Make static.
	* sysdeps/x86_64/multiarch/s_fmaf.c (__fmaf_sse2): Add attribute_hidden.
	(__fmaf_fma): Make static.

2009-08-31  Andreas Schwab  <schwab@redhat.com>

	* libio/wfileops.c (_IO_wfile_seekoff): Remove dead code and
	reformulate in-buffer optimisation check to match code in
	_IO_new_file_seekoff.

2009-08-31  Joshua W. Boyer  <jwboyer@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/memcpy.S: Change srdi instruction
	to srwi in 32-bit memcpy for power6.

2009-09-01  Andreas Schwab  <schwab@redhat.com>

	* include/stdio.h: Declare hidden proto for fflush.
	* libio/iofflush.c: Add hidden weak alias for fflush.

2009-09-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/x86_64/fpu/bits/mathinline.h: Include bits/wordsize.h.
	(__signbitf, __signbit): Only use SSE inline asm for 64-bit.

2009-08-31  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/x86_64/fpu/bits/mathinline.h: Use __asm instead of asm.

2009-08-31  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10560]