@@ -1,3 +1,12 @@
+2009-09-07  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale/programs/ld-collate.c (struct locale_collate_t): Add
+	unnamed_section_defined field.
+	(collate_read): Test and set unnamed_section_defined.
+
+	* posix/getconf.c (vars): Handle POSIX2_LINE_MAX in addition to
+	_POSIX2_LINE_MAX.
+
 2009-09-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* configure.in: Support binutils 2.20.
